log/build_2024-08-28_11-09-47/get_body_reconstruction/stdout_stderr.log
running egg_info
writing ../../build/get_body_reconstruction/get_body_reconstruction.egg-info/PKG-INFO
writing dependency_links to ../../build/get_body_reconstruction/get_body_reconstruction.egg-info/dependency_links.txt
writing entry points to ../../build/get_body_reconstruction/get_body_reconstruction.egg-info/entry_points.txt
writing requirements to ../../build/get_body_reconstruction/get_body_reconstruction.egg-info/requires.txt
writing top-level names to ../../build/get_body_reconstruction/get_body_reconstruction.egg-info/top_level.txt
reading manifest file '../../build/get_body_reconstruction/get_body_reconstruction.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/get_body_reconstruction/get_body_reconstruction.egg-info/SOURCES.txt'
running build
running build_py
copying get_body_reconstruction/get_body_reconstruction.py -> /home/andre/ros2_ws/build/get_body_reconstruction/build/lib/get_body_reconstruction
running install
running install_lib
copying /home/andre/ros2_ws/build/get_body_reconstruction/build/lib/get_body_reconstruction/get_body_reconstruction.py -> /home/andre/ros2_ws/install/get_body_reconstruction/lib/python3.10/site-packages/get_body_reconstruction
byte-compiling /home/andre/ros2_ws/install/get_body_reconstruction/lib/python3.10/site-packages/get_body_reconstruction/get_body_reconstruction.py to get_body_reconstruction.cpython-310.pyc
  File "/home/andre/ros2_ws/install/get_body_reconstruction/lib/python3.10/site-packages/get_body_reconstruction/get_body_reconstruction.py", line 89
    self.get_logger().info(f'Usando id {point_id} punto de cámara 1 y 2: {self.points_c1[point_id]['coordinates']} y {self.points_c2[point_id]["coordinates"]} con visibilidad {visibility_c1} y {visibility_c2}')
                                                                                                     ^^^^^^^^^^^
SyntaxError: f-string: unmatched '['

running install_data
running install_egg_info
removing '/home/andre/ros2_ws/install/get_body_reconstruction/lib/python3.10/site-packages/get_body_reconstruction-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/get_body_reconstruction/get_body_reconstruction.egg-info to /home/andre/ros2_ws/install/get_body_reconstruction/lib/python3.10/site-packages/get_body_reconstruction-0.0.0-py3.10.egg-info
running install_scripts
Installing form_body script to /home/andre/ros2_ws/install/get_body_reconstruction/lib/get_body_reconstruction
writing list of installed files to '/home/andre/ros2_ws/build/get_body_reconstruction/install.log'
